--- a/laziness-of-ghc/laziness-of-ghc.tex
+++ b/laziness-of-ghc/laziness-of-ghc.tex
@@ -36,13 +36,12 @@
 
 %--------------------------------------------
 
-
 \section{Laziness and strictness}
 
 \begin{frame}
 \frametitle{Some examples}
 \begin{listing}[H]
-\inputminted{haskell}{a.hs}
+\inputminted{haskell}{src/a.hs}
 \caption{Example of a listing.}
 \label{lst:example}
 \end{listing}
